Sprint 6 v0: Improved historyManager logic and added some tests